--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -42,22 +42,22 @@
                 </div>
             </div>
             <a href="#" class="login-button">Login</a>
-            <button class="navbar-toggler pe-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
-                aria-controls="offcanvasNavbar" aria-label="Toggle navigation"><span
+            <button class="navbar-toggler pe-0" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation"><span
                     class="navbar-toggler-icon"></span>></button>
         </div>
     </nav>
     <!-- End navbar -->
 
-    <!--section  -->
+    <!--section -->
     <section class="hero-section">
         <div class="container d-flex align-items-center justify-content-center fs-1 text-white flex-column">
             <h1>AgroCrop</h1>
-            <h2>Help to grow better quality crop and tech how to protect the crops from different types of Disease.!</h2>
+            <h2>Helps to grow better quality crop and teach how to protect the crops from different types of Disease.!
+            </h2>
         </div>
     </section>
-    <!-- End section -->
-
+    <!--End section -->
 
 
 
