--- a/app/static/style.css
+++ b/app/static/style.css
@@ -16,8 +16,6 @@
     transition: 0.3s color;
 }
 
-
-
 .login-button {
     background-color: #009970;
     color: #fff;
@@ -28,7 +26,7 @@
     transition: 0.3s background-color;
 }
 
-.login-button:hover{
+.login-button:hover {
     background-color: #00b383;
 }
 
@@ -37,7 +35,8 @@
     font-size: 1.25rem;
 }
 
-.navbar-toggler:focus, btn-close:focus {
+.navbar-toggler:focus,
+btn-close:focus {
     box-shadow: none;
     outline: none;
 }
@@ -48,12 +47,13 @@
     position: relative;
 }
 
-.nav-link:hover, .nav-link:active {
+.nav-link:hover,
+.nav-link:active {
     color: #000;
 }
 
 @media (min-width: 991px) {
-    .nav-link::before{
+    .nav-link::before {
         content: "";
         position: absolute;
         bottom: 0;
@@ -66,7 +66,8 @@
         transition: 0.3s ease-in-out;
     }
 
-    .nav-link:hover::before, .nav-link.active::before{
+    .nav-link:hover::before,
+    .nav-link.active::before {
         width: 100%;
         visibility: visible;
     }
@@ -79,7 +80,7 @@
     height: 100vh;
 }
 
-.hero-section::before{
+.hero-section::before {
     background-color: rgba(0, 0, 0, 0.6);
     content: "";
     position: absolute;
@@ -95,10 +96,17 @@
     position: relative;
 }
 
-.hero-section h1{
+.hero-section h1 {
     font-size: 1.5rem;
 }
 
-.hero-section h2{
+.hero-section h2 {
     font-size: 1.2rem;
+}
+
+
+/* about section */
+.container {
+    gap: 20px;
+    height: 100px;
 }
