--- a/app/templates/index2.html
+++ b/app/templates/index2.html
@@ -15,6 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <link rel="shortcut icon" type="image" href="../static/agroc.png">
     <title>AgroCrop</title>
 
 </head>
@@ -35,7 +36,7 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link mx-lg-2 active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link mx-lg-2 active" aria-current="page" href="index2.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link mx-lg-2" href="#">Fertilizer</a>
