--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -14,6 +14,16 @@
       background-size: 100% 100%;
       background-attachment: fixed;
     }
+    .card-body{
+      padding-right: 100px;
+      padding-left: 100px;
+      padding-top:50px;
+      padding-bottom : 50px; 
+    }
+    .img-fluid {
+      height: 340px;
+      width: 500px;
+    }
   </style>
 </head>
 
@@ -56,11 +66,11 @@
     <br><br><br><br><br>
   </div>
   <center>
-    <div class="card mb-3" style="max-width: 700px;">
+    <div class="card mb-3" style="max-width: 1150px; " >
       <div class="row g-0">
         <div class="col-md-8">
           <div class="card-body" style="opacity: 1;">
-            <h3 class="card-title">About Us</h3>
+            <h3 class="card-title"><b>About Us</b></h3>
 
             <p class="card-text">Welcome to AgroCrop, where we are committed to cultivating excellence in agriculture
               through cutting-edge soil quality analysis and comprehensive agronomic solutions.<br><br>
@@ -70,32 +80,32 @@
           </div>
         </div>
         <div class="col-md-4">
-          <img src="../static/agroc.png" class="img-fluid rounded-start" alt="...">
+          <img src="../static/agroc.png" class="img-fluid rounded-start" alt="..." height = "500px" width="500px">
         </div>
       </div>
     </div>
-    <div class="card mb-3" style="max-width: 700px;">
+    <div class="card mb-3" style="max-width: 1150px;">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="../static/main2.jpg" class="img-fluid rounded-start" alt="...">
+          <img src="../static/main6.jpg" class="img-fluid rounded-start" alt="...">
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h3 class="card-title">Our Mission: Helping Agriculture Sector Grow Better</h3>
+            <h3 class="card-title"><b>Our Mission: Make Agriculture Grow</b></h3>
             <p class="card-text">Agrocrop specializes in delivering valuable insights and data about crops, from
               planting and cultivation to harvesting and beyond. Our platform offers detailed information on crop
-              varieties, growth conditions, pest management, and soil health. We utilize advanced analytics to bring you
+              varieties, growth conditions, pest management, and soil health.<br><br> We utilize advanced analytics to bring you
               tailored recommendations and actionable strategies, helping you make informed decisions that enhance
-              productivity and sustainability.<br><br>Agrocrop specializes in delivering valuable insights and data about crops, from planting and cultivation to harvesting and beyond.</p>
+              productivity and sustainability.</p>
           </div>
         </div>
       </div>
     </div>
-    <div class="card mb-3" style="max-width: 700px;">
+    <div class="card mb-3" style="max-width: 1150px;">
       <div class="row g-0">
         <div class="col-md-8">
           <div class="card-body" style="opacity: 1;">
-            <h3 class="card-title">Our Story</h3>
+            <h3 class="card-title"><b>Our Story</b></h3>
 
             <p class="card-text">Founded in 2024, Our platform offers detailed information on crop varieties, growth conditions, pest management, and soil health. We utilize advanced analytics to bring you tailored recommendations and actionable strategies, helping you make informed decisions that enhance productivity and sustainability.<br><br>While our core focus is on crop-related information, Agrocrop also excels in other areas of agriculture.</p>
           </div>
