--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../static/style.css" />
+  <link rel="shortcut icon" type="image" href="../static/agroc.png">
   <title>About Us</title>
   <style>
     body {
@@ -33,7 +34,7 @@
       <a class="navbar-brand me-auto" href="index.html">AgroCrop</a>
       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
         <div class="offcanvas-header">
-          <h5 class="offcanvas-tittle" id="offcanvasNavbarLabel">Logo</h5>
+          <h5 class="offcanvas-tittle" id="offcanvasNavbarLabel">AgroCrop</h5>
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
@@ -59,7 +60,7 @@
       <a href="#" class="login-button">Login</a>
       <button class="navbar-toggler pe-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
         aria-controls="offcanvasNavbar" aria-label="Toggle navigation"><span
-          class="navbar-toggler-icon"></span>></button>
+          class="navbar-toggler-icon"></span></button>
     </div>
   </nav>
   <div>
