--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,7 +26,7 @@
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
                 aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
-                    <h5 class="offcanvas-tittle" id="offcanvasNavbarLabel">Logo</h5>
+                    <h5 class="offcanvas-tittle" id="offcanvasNavbarLabel">AgroCrop</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
@@ -52,7 +52,7 @@
             <a href="#" class="login-button">Login</a>
             <button class="navbar-toggler pe-0" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation"><span
-                    class="navbar-toggler-icon"></span>></button>
+                    class="navbar-toggler-icon"></span></button>
         </div>
     </nav>
     <!-- End navbar -->
