--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -52,8 +52,12 @@
               <a class="nav-link mx-lg-2" href="#">Disease</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link mx-lg-2" href="shop.html">Shop</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link mx-lg-2 active" href="aboutus.html">About Us</a>
             </li>
+            
           </ul>
         </div>
       </div>
@@ -156,6 +160,11 @@
                                   About Us
                               </a>
                           </li>
+                          <li>
+                            <a href="shop.html"
+                                class="link-underline-opacity-0 link-opacity-75-hover link-underline-opacity-100-hover link-offset-1 link-light link-opacity-75 fs-7">
+                                Shop
+                            </a>
                       </ul>
                   </div>
               </div>
