--- a/app/templates/crop.html
+++ b/app/templates/crop.html
@@ -82,8 +82,12 @@
                             <a class="nav-link mx-lg-2" href="#">Disease</a>
                         </li>
                         <li class="nav-item">
+                          <a class="nav-link mx-lg-2" href="shop.html">Shop</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link mx-lg-2" href="aboutus.html">About Us</a>
                         </li>
+                        
                     </ul>
                 </div>
             </div>
