--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -35,13 +35,13 @@
                             <a class="nav-link mx-lg-2 active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-lg-2" href="#">Fertilizer</a>
+                            <a class="nav-link mx-lg-2" href="fertilizers.html">Fertilizer</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link mx-lg-2" href="crop.html">Crop</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-lg-2" href="#">Disease</a>
+                            <a class="nav-link mx-lg-2" href="disease.html">Disease</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link mx-lg-2" href="shop.html">Shop</a>
@@ -124,7 +124,7 @@
                             <b>Fertilizers</b> for your crops.
                         </p>
                         <form>
-                            <button type="submit" formaction="#" class="btn btn-primary">Explore Fertilizers</button>
+                            <button type="submit" formaction="fertilizers.html" class="btn btn-primary">Explore Fertilizers</button>
                         </form>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
                         <p>Agrocrop also excels in other areas of agriculture like <b>Crop disease, agricultural
                                 science, technology, and innovation</b>.</p>
                         <form>
-                            <button type="submit" formaction="#" class="btn btn-primary">Explore Others</button>
+                            <button type="submit" formaction="disease.html" class="btn btn-primary">Explore Others</button>
                         </form>
                     </div>
                 </div>
@@ -174,13 +174,13 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#!"
+                                <a href="fertilizers.html"
                                     class="link-underline-opacity-0 link-opacity-75-hover link-underline-opacity-100-hover link-offset-1 link-light link-opacity-75 fs-7">
                                     Fertilizers
                                 </a>
                             </li>
                             <li>
-                                <a href="#!"
+                                <a href="disease.html"
                                     class="link-underline-opacity-0 link-opacity-75-hover link-underline-opacity-100-hover link-offset-1 link-light link-opacity-75 fs-7">
                                     Disease
                                 </a>
