--- a/app/templates/shop.html
+++ b/app/templates/shop.html
@@ -27,8 +27,16 @@
             $(".wish-icon i").click(function () {
                 $(this).toggleClass("fa-heart fa-heart-o");
             });
-        });	
+        });
+        	
     </script>
+    <style>
+        body{
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+            background-attachment: fixed;
+            }
+    </style>
 
 </head>
 
@@ -48,13 +56,13 @@
                             <a class="nav-link mx-lg-2" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-lg-2" href="#">Fertilizer</a>
+                            <a class="nav-link mx-lg-2" href="fertilizers.html">Fertilizer</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link mx-lg-2" href="crop.html">Crop</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-lg-2" href="#">Disease</a>
+                            <a class="nav-link mx-lg-2" href="disease.html">Disease</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link mx-lg-2 active" href="shop.html">Shop</a>
@@ -311,13 +319,13 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#!"
+                                <a href="fertilizers.html"
                                     class="link-underline-opacity-0 link-opacity-75-hover link-underline-opacity-100-hover link-offset-1 link-light link-opacity-75 fs-7">
                                     Fertilizers
                                 </a>
                             </li>
                             <li>
-                                <a href="#!"
+                                <a href="disease.html"
                                     class="link-underline-opacity-0 link-opacity-75-hover link-underline-opacity-100-hover link-offset-1 link-light link-opacity-75 fs-7">
                                     Disease
                                 </a>
