--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -43,13 +43,13 @@
               <a class="nav-link mx-lg-2" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mx-lg-2" href="#">Fertilizer</a>
+              <a class="nav-link mx-lg-2" href="fertilizers.html">Fertilizer</a>
             </li>
             <li class="nav-item">
               <a class="nav-link mx-lg-2" href="crop.html">Crop</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mx-lg-2" href="#">Disease</a>
+              <a class="nav-link mx-lg-2" href="disease.html">Disease</a>
             </li>
             <li class="nav-item">
               <a class="nav-link mx-lg-2" href="shop.html">Shop</a>
@@ -143,13 +143,13 @@
                               </a>
                           </li>
                           <li>
-                              <a href="#!"
+                              <a href="fertilizers.html"
                                   class="link-underline-opacity-0 link-opacity-75-hover link-underline-opacity-100-hover link-offset-1 link-light link-opacity-75 fs-7">
                                   Fertilizers
                               </a>
                           </li>
                           <li>
-                              <a href="#!"
+                              <a href="disease.html"
                                   class="link-underline-opacity-0 link-opacity-75-hover link-underline-opacity-100-hover link-offset-1 link-light link-opacity-75 fs-7">
                                   Disease
                               </a>
