--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -26,7 +26,7 @@
 
                     <!-- Logo -->
                     <a href="#" class="d-flex justify-content-center mb-4">
-                        <img src="../static/agroc.png" alt="" width="60">
+                        <img src="../static/AG.png" alt="" width="60">
                     </a>
                     <!--? Logo  -->
 
